提交ume工程，为了将功能融合到ume里

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,11 @@ dependencies:
   flutter:
     sdk: flutter
   device_info_plus:
+  cached_network_image:
   dio:
   teledart:
   oktoast:
+  path_provider:
+  crypto:
+  convert:
+  url_launcher:
