--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: ume_kit_monitor
 description: use ume_kit_monitor to check more net log
 
 version: 0.0.1
-homepage: https://github.com/fastcode555/Json2Dart_Null_Safety.git
+homepage: https://github.com/fastcode555/ume_kit_monitor
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
