refactor:删除无用的属性

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: ume_kit_monitor
 description: use ume_kit_monitor to check more net log
 
-version: 1.0.1
+version: 1.0.2
 homepage: https://github.com/fastcode555/ume_kit_monitor
 
 environment:
@@ -19,3 +19,4 @@ dependencies:
   crypto:
   convert:
   url_launcher:
+  json_shrink_widget:
