--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: ume_kit_monitor
-description: use ume_kit_monitor to check more net log
+description: use ume_kit_monitor to show more infomation contain log,page,curl,response,json
 
-version: 1.0.5
+version: 1.0.6
 homepage: https://github.com/fastcode555/ume_kit_monitor
 
 environment:
