--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,14 @@
 name: ume_kit_monitor
 description: use ume_kit_monitor to show more infomation contain log,page,curl,response,json
 
-version: 1.1.0
+version: 2.0.0
 homepage: https://github.com/fastcode555/ume_kit_monitor
 
 environment:
   sdk: '>=3.2.3 <4.0.0'
 
 dependencies:
-  flutter_ume: '>=0.3.0'
+  flutter_ume_plus: '>=4.0.0'
   flutter:
     sdk: flutter
   dio:
