--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
 
 dependency_overrides:
   vm_service: ^14.2.2
+  win32: ^5.9.0
+  archive: ^3.6.1
 
 dev_dependencies:
   flutter_test:
